# orb_slam_2_ros

./: CMakeLists.txt  package.xml
include/orb_slam_2_ros/: interface.hpp  interface_rgbd.h  interface_stereo.hpp  logger.h
src/: orb_slam_2_ros_node.cpp
